--- a/_posts/2022-03-04-Sudo _-.md
+++ b/_posts/2022-03-04-Sudo _-.md
@@ -1,5 +1,7 @@
 ---
-title: Sudo -
+title: "Sudo -"
+
+date: March, 4, 2022 11:43 AM
 
 Created: March 4, 2022 10:29 AM
 Last edited: March 4, 2022 11:43 AM
