--- a/_posts/2022-03-04-Sudo _-.md
+++ b/_posts/2022-03-04-Sudo _-.md
@@ -24,6 +24,6 @@ The second one, *CVE-2019-18634,* is the buffer overflow vulnerability when usin
 
 The proof of concept, [https://www.exploit-db.com/exploits/47995](https://www.exploit-db.com/exploits/47995), shows that by generating the large password input, the feedback is given back as `Segmentation fault` which means that large input has tried to access to memory that should not be supposed to. Boom!
 
-![Untitled](/assets/posts/2022-03-04-Sudo%20_-/Untitled.png)
+![Untitled]({{ site.baseurl }}/assets/posts/2022-03-04-Sudo%20_-/Untitled.png)
 
 The POC in C has made public on [GitHub](https://github.com/saleemrashid/sudo-cve-2019-18634). See in action, check out THM room, [Sudo Vulns BOF](https://tryhackme.com/room/sudovulnsbof). The version 1.8.26 to 1.8.30 were reported to be exploitable. The remediation step can be done as simple as making sure to disable `pwfeedback` in `/etc/sudoers` as mentioned on [the official advisory](https://www.sudo.ws/security/advisories/pwfeedback/#workaround).
